@@ -71,13 +71,14 @@
 </addon>
 
 <addon id="plugin.video.filmibynature" name="Filmi BY NATURE"
-	version="1.9.6.3" provider-name="AJ">
+	version="1.9.7" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.turtle" version="1.1.4" />
 		<import addon="script.module.metahandler" version="1.0.1"/>
+		<import addon="script.common.plugin.cache" version="0.9.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
 		<provides>video</provides>
